# forgeos

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRACTFORGE_BUGS.md  Dockerfile  HANDOFF.md  README.md  SOUL.md  SPEC.md  STATE.md  TASKS.md  api.py  config.py  docker-compose.yml  fix_render_cmd.py  forge_brain.py  healer.py  models.py  orchestrator.py  pyproject.toml  queue.py  worker_daemon.py
.claude/: ecc-tools.json  identity.json  settings.json  (+1 more)
builds/contractforge-ai-contract-and-pr-1779644220/project/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  doppler.yaml  package.json  pyproject.toml
builds/contractforge-ai-contract-and-pr-1779644220/project/.github/workflows/: ci.yml  deploy.yml
builds/contractforge-ai-contract-and-pr-1779644220/project/backend/: Dockerfile  alembic.ini  requirements.txt
builds/contractforge-ai-contract-and-pr-1779644220/project/backend/app/: auth.py  config.py  db.py  lemon.py  main.py  models.py  rate_limit.py  schemas.py  sentry.py
builds/contractforge-ai-contract-and-pr-1779644220/project/backend/migrations/: env.py
builds/contractforge-ai-contract-and-pr-1779644220/project/backend/tests/: conftest.py  test_health.py  test_items.py
builds/contractforge-ai-contract-and-pr-1779644220/project/frontend/: Dockerfile  package.json  tsconfig.json  vitest.config.ts
builds/contractforge-ai-contract-and-pr-1779644220/project/frontend/app/: globals.css  layout.tsx  page.tsx
builds/contractforge-ai-contract-and-pr-1779644220/project/frontend/components/: ItemForm.tsx  ItemList.tsx
builds/contractforge-ai-contract-and-pr-1779644220/project/frontend/lib/: api.ts  sentry.ts  supabase.ts
builds/contractforge-ai-contract-and-pr-1779644220/project/ml/: data_validation.py  inference.py  train.py
builds/contractforge-ai-contract-and-pr-1779644220/project/monitoring/: sentry.md
builds/contractforge-ai-contract-and-pr-1779644220/project/supabase/: policies.sql  schema.sql
(+292 files in other folders)
