[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgeos"
version = "0.1.0"
description = "ForgeOS — autonomous multi-agent product factory."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ForgeOS" }]
dependencies = [
  "click>=8.1",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
]
api = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
]
all = [
  "anthropic>=0.34",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "httpx>=0.27",
  "jinja2>=3.1",
]

[project.scripts]
forgeos = "forgeos.cli:main"
forge = "forgeos.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["forgeos*"]

[tool.setuptools.package-data]
"forgeos.templates" = ["**/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: real tool invocations (semgrep, network, etc.)",
]
