[project]
name = "app-backend"
version = "0.1.0"
description = "Backend service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "httpx>=0.27",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "redis>=5.0",
  "sentry-sdk>=2.10",
  "structlog>=24.1",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "httpx[testing]>=0.27",
  "respx>=0.21",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --cov=backend --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py311"
